Fixed items alignment

--- a/src/pages/Print/_sections.scss
+++ b/src/pages/Print/_sections.scss
@@ -237,7 +237,6 @@ $size: 20px;
   &__items {
     max-width: $size * 20;
     margin: auto;
-    text-align: left;
 
     &__row {
       padding: 0 0 0 ($size / 5);
